# conways-game-of-life

./: .gitignore  CMakeLists.txt  README.md  life_game.sln
WinApp/: Resource.h  WinApp.cpp  WinApp.rc  WinApp.vcxproj  WinApp.vcxproj.filters
conways-game-of-life/: Game.cpp  Game.h  ModuleC.cu  ModuleC.cuh  ModuleM.cpp  ModuleM.h  ModuleV.cpp  ModuleV.h  basic_types.h  constants.h  conways-game-of-life.vcxproj  conways-game-of-life.vcxproj.filters  defines.h  main.cpp
cuda_core/: cuda_core.vcxproj  kernel.cpp  kernel.cu  kernel.cuh
life_game/: Point.ixx  Window.cpp  Window.h  cell.cpp  cell.h  const_values.h  game.cpp  game.h  game_info  input.cpp  input.h  life_game.vcxproj  life_game.vcxproj.filters  main.cpp  main_funcs.h  output.cpp  output.h  screen.cpp  screen.h  window.ixx
src/: game.hxx  main.cc  main.cxx
src/core/: alive.hxx  common.hxx  engine.cc  engine.hpp  engine.hxx  field.cxx  field.hxx  point.cxx  point.hxx
src/display/: display.hxx  stream.cc  stream.hpp  window.cc  window.hpp
src/display/curses/: window.hxx
src/display/gtk/: drawer.hxx  interface.cmb  interface.glade  window.hxx
src/display/gtk/interface/: interface.cmb
src/display/sdl/: color.cxx  color.hxx  font.cxx  font.hxx  sdl.cxx  sdl.hxx  window.hxx
src/display/sdl/debug/: sdl_debug_output.cxx  sdl_debug_output.hxx
